# MathFixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_FA.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  BEGINNER_GUIDE.html  BEGINNER_GUIDE.md  BEGINNER_GUIDE_FA.html  BEGINNER_GUIDE_FA.md  ROADMAP.md  guide-en.css  guide-fa.css
examples/: README_FA.md  broken_formula.tex  template-adapter.example.json
scripts/: build_installer.ps1  build_windows.ps1  mathfixer.iss  mathfixer_gui.py
src/mathfixer/: __init__.py  api.py  cli.py  detector.py  docx_engine.py  gui.py  i18n.py  models.py  pandoc_backend.py  pdf_export.py  repair.py
src/mathfixer/core/: __init__.py  output_naming.py  reporting.py  security.py
src/mathfixer/features/: __init__.py  ai_assistant.py  ai_providers.py  citations.py  collaboration.py  latex_log.py  latex_project.py  latex_workspace.py  pdf_compare.py  persian.py  project_conversion.py  word_to_latex.py
src/mathfixer/plugins/: __init__.py  academic_style.py  persian_fix.py  sdk.py  template_adapter.py  thesis.py
tests/: gui_smoke.py  smoke_document.py  test_ai_providers.py  test_api.py  test_collaboration.py  test_detector.py  test_i18n.py  test_latex_log.py  test_latex_project.py  test_latex_workspace.py  test_output_naming.py  test_pandoc_backend.py  test_pdf_compare.py  test_pdf_export.py  test_plugins.py  test_preservation.py  test_project_conversion.py  test_repair.py  test_security.py
