[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-mathfixer"
version = "2.0.7"
description = "Smart formula repair and scientific document assistant for Word, LaTeX, and Persian theses"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "MathFixer contributors"}]
keywords = ["word", "docx", "latex", "omml", "equation", "ooxml", "pandoc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "lxml>=5.1,<7",
  "Pillow>=10,<13",
  "pypdf>=4,<7",
  "pypdfium2>=4.30,<6",
]

[project.optional-dependencies]
gui = ["PySide6-Essentials>=6.7,<7"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "pyinstaller>=6.8"]

[project.urls]
Homepage = "https://github.com/MahdiMazinani/MathFixer"
Issues = "https://github.com/MahdiMazinani/MathFixer/issues"

[project.scripts]
mathfixer = "mathfixer.cli:main"
mathfixer-gui = "mathfixer.gui:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mathfixer = ["resources/*.svg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
